@@ -17,15 +17,15 @@
 #define CH_WHITE	0x0001
 #define CH_LCLETTER	0x0002
 #define CH_UCLETTER	0x0004
-#define CH_LCNMSTRT	0x0008
-#define CH_UCNMSTRT	0x0010
+#define CH_CNMSTRT	0x0008		/* may start a name */
+#define CH_CNM		0x0010		/* may be in a name */
 #define CH_DIGIT	0x0020
 #define CH_RE		0x0040
 #define CH_RS		0x0080
 
 #define CH_LETTER	(CH_LCLETTER|CH_UCLETTER)
-#define CH_NMSTART	(CH_LCLETTER|CH_UCLETTER|CH_LCNMSTRT|CH_UCNMSTRT)
-#define CH_NAME		(CH_NMSTART|CH_DIGIT)
+#define CH_NMSTART	(CH_LCLETTER|CH_UCLETTER|CH_CNMSTRT)
+#define CH_NAME		(CH_NMSTART|CH_DIGIT|CH_CNM)
 #define CH_BLANK	(CH_WHITE|CH_RE|CH_RS)
 
 #define CHR_BLANK	0x1		/* SHORTREF 'B' */
